<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="18dp"
    android:orientation="vertical"
    tools:context=".ui.TransactionActivity">

    <TextView
        android:id="@+id/transaction_customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:text="Customer Name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/call"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="24dp"
            android:src="@drawable/ic_call" />

        <TextView
            android:id="@+id/due_payment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/due_payment" />

        <TextView
            android:id="@+id/due_payment_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/due_payment_text"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:text="@string/_1000"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/due_payment_text"
            android:layout_toStartOf="@+id/due_payment_cash"
            android:text="@string/money_unit"
            android:textSize="32sp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transaction_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="48dp"
        tools:listitem="@layout/transaction_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/given_cash"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/Given" />

        <Button
            android:id="@+id/taken_cash"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/Taken" />

    </LinearLayout>

</LinearLayout>