<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/transaction_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="2021-2-13"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/transaction_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transaction_date"
                android:layout_alignParentEnd="true"
                android:text="ملاحظه" />

            <TextView
                android:id="@+id/transaction_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transaction_cash"
                android:hint="@string/debt" />

            <TextView
                android:id="@+id/money_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_unit"
                android:textColor="#4CAF50"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/transaction_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/money_unit"
                android:paddingStart="6dp"
                android:text="@string/_1000"
                android:textColor="#4CAF50"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A4CACAE1"
            android:paddingTop="18dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>